--- a/src/app/component/main-page/main-page.component.html
+++ b/src/app/component/main-page/main-page.component.html
@@ -1,1 +1,7 @@
-<app-blocks></app-blocks>
+<div (mousemove)="pageMouseMove($event)" class="main-page">
+    <!-- <p #idDisplayXY class="displayXY">x: y:</p>	    -->
+    <button (click)="addClassBlockOnClick()">Add Class Block</button>
+    <button (click)="saveAllData()">SaveData</button> 
+    <!-- <app-blocks></app-blocks>     -->
+</div>
+
