--- a/src/app/component/main-page/main-page.component.html
+++ b/src/app/component/main-page/main-page.component.html
@@ -1,7 +1,9 @@
+<!-- <div (mousemove)="pageMouseMove($event)" class="main-page"> -->
 <div (mousemove)="pageMouseMove($event)" class="main-page">
-<div class="main-page">
-    <p #idDisplayXY class="displayXY">x: y:</p>	   
-    <button (click)="addClassBlockOnClick()">Add Class Block</button>
-    <button (click)="saveAllData()">SaveData</button> 
-    <app-blocks #container></app-blocks>    
+    <!-- <div class="main-page"> -->
+        <p #idDisplayXY class="displayXY">x: y:</p>	   
+        <button (click)="addClassBlockOnClick()">Add Class Block</button>
+        <button (click)="saveAllData()">SaveData</button> 
+        <app-blocks #container></app-blocks>    
+    <!-- </div> -->
 </div>
