--- a/src/app/component/main-page/main-page.component.sass
+++ b/src/app/component/main-page/main-page.component.sass
@@ -5,7 +5,7 @@
     background-color: #f1f1f1
 
     .displayXY
-        font: 1.5em sans-serif
+        // font: 1.5em sans-serif     
         position: fixed
         top: 10px
         right: 10px
