--- a/src/app/component/blocks/blocks.component.sass
+++ b/src/app/component/blocks/blocks.component.sass
@@ -6,9 +6,15 @@
     // color: #2C3E50
     box-shadow: #2C3E50 1px 1px 10px
     background-color: #CA2C68
-    opacity: 0.9
-    border: 1px solid #2C3E50
+    // opacity: 0.9
+    border: 2px solid #2C3E50
+    // border: 4px solid #CA2C68
     padding-bottom: 10px
+    // color: white
+
+    .class-block-container
+        padding: 10px
+        color: white
 
     .move-spot        
         position: relative
@@ -44,5 +50,16 @@
         color: white
         background-color: #CA2C68
         border: none
-        top: 1px
-        left: 10px
+        // top: 1px
+        // left: 10px
+
+    .hot-spot
+        width: 20px
+        height: 20px
+        margin-top: 10px
+        background-color: #2C3E50
+        border: 1px solid yellow
+
+.class-block:hover
+    // border: 1px solid grey !important
+    box-shadow: #2C3E50 1px 1px 1px
