--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,4 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
-html, body
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@400&display=swap')
+html, body, button, input
+    font-family: 'Comfortaa', cursive
     margin: 0
-    margin: 0
+    padding: 0
+    -webkit-box-sizing: border-box
+    -moz-box-sizing: border-box
+    -o-box-sizing: border-box
+    box-sizing: border-box
+    outline: none
+    -webkit-user-select: none
+    -khtml-user-select: none
+    -moz-user-select: none
+    -ms-user-select: none
+    -o-user-select: none
+    user-select: none
